--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ android {
 
 dependencies {
 
+
+
     //veritabanı mesaj işlemleri ve kullanıcı doğrulama
     implementation 'com.google.firebase:firebase-firestore-ktx:24.0.0'
     implementation platform('com.google.firebase:firebase-bom:29.0.1')
@@ -67,6 +69,11 @@ dependencies {
     //FCM
     implementation 'com.google.firebase:firebase-messaging-ktx:23.0.0'
     implementation 'com.google.firebase:firebase-inappmessaging-display-ktx:20.1.1'
+
+
+    //video chat sdk
+    implementation 'io.agora.rtc:full-sdk:3.6.0.1'
+
 
 
     def workManager = "2.7.1"
