--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ buildscript {
         mavenCentral()
         maven { url "https://jitpack.io" }
         maven { url "https://www.jitpack.io" }
+        mavenCentral()
+
 
     }
     dependencies {
